syntax = "proto3";
package com.antigravity;

import "client/driver_model.proto";

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "RaceParticipantProto";

message RaceParticipant {
  string object_id = 1;
  DriverModel driver = 2;
  int32 rank = 3;
  int32 total_laps = 4;
  float total_time = 5;
  float best_lap_time = 6;
  float average_lap_time = 7;
  float median_lap_time = 8;
}
